--- a/semana_estatistica/aula3.ipynb
+++ b/semana_estatistica/aula3.ipynb
@@ -23,12 +23,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in c:\\users\\ead\\desktop\\semanaestatistica\\semanaestatistica\\.venv\\lib\\site-packages (2.2.2)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\ead\\desktop\\semanaestatistica\\semanaestatistica\\.venv\\lib\\site-packages (from pandas) (2.1.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\ead\\desktop\\semanaestatistica\\semanaestatistica\\.venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\ead\\desktop\\semanaestatistica\\semanaestatistica\\.venv\\lib\\site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\ead\\desktop\\semanaestatistica\\semanaestatistica\\.venv\\lib\\site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\ead\\desktop\\semanaestatistica\\semanaestatistica\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+      "Requirement already satisfied: pandas in c:\\users\\ead\\documents\\elias\\.venv\\lib\\site-packages (2.2.2)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\ead\\documents\\elias\\.venv\\lib\\site-packages (from pandas) (2.1.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\ead\\documents\\elias\\.venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\ead\\documents\\elias\\.venv\\lib\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\ead\\documents\\elias\\.venv\\lib\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\ead\\documents\\elias\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
      ]
     }
    ],
@@ -3450,6 +3450,23 @@
     "ax.xaxis.set_tick_params(labelsize=10)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alo mundo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"alo mundo\")"
    ]
   }
  ],
